[gd_scene load_steps=3 format=3 uid="uid://b4maimsk3paqp"]

[ext_resource type="Script" uid="uid://dku1hbt6bxn1v" path="res://scenes/song_select/instrument_selector.gd" id="1_428hl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_82k47"]
bg_color = Color(2.9841065e-06, 0.52998865, 0.7637472, 1)

[node name="InstrumentSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_428hl")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.7058824)

[node name="GalleryContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 0

[node name="BackButton" type="Button" parent="GalleryContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 31)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_82k47")
text = "Назад	"

[node name="Content" type="VBoxContainer" parent="GalleryContainer"]
layout_mode = 2

[node name="PercussionButton" type="Button" parent="GalleryContainer/Content"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
text = "Перкуссия"
